# Books-Pipeline

./: .gitignore  README.md  pyproject.toml
scripts/: etl.py
