[project]
name = "book-api-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]
